--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ python:
   - "3.6-dev"  # 3.6 development branch
   - "3.7-dev"  # 3.7 development branch
 # command to run tests
-script: test_rpn
+script:
+  - python test_rpn.py
