--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 script:
   - python test_rpn.py
-  - coverage run rpn.py
+  - python coverage run rpn.py
 python:
   - "2.6"
   - "2.7"
