--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 script:
+  - python pip install coverage
   - python test_rpn.py
   - python coverage run rpn.py
 python:
-  - "2.6"
-  - "2.7"
   - "3.5"
