--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 script:
-  - python pip install coverage
+  - pip install coveralls
+  - pip install coverage
+  - coverage run test_rpn.py
+  - coverage report
   - python test_rpn.py
-  - python coverage run rpn.py
 python:
   - "3.5"
